Some alignment issue

--- a/style.css
+++ b/style.css
@@ -184,6 +184,19 @@
   border-color: white;
 }
 
+
+.buttonbox3 {
+  width:28vw;
+  height: 2vw;
+  position:absolute;
+  top:65%;
+  left:56%;
+  margin-right:-50%;
+  transform: translate(-50%,0%);
+  border-style: solid;
+  border-color: white;
+}
+
 .CCT-btn {
   font-size:16px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
